--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = ">=0.0.5,<1.0"
 pyotp = ">=2.6.0,<3.0"
 wsproto = "^1.1.0"
+python-socketio = "^5.6.0"
 
 
 [tool.poetry.dev-dependencies]
