--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ grpcio = ">=1.45.0,<2.0"
 fastapi = ">=0.75.0,<1.0"
 tortoise-orm = ">=0.19.0,<1.0"
 toml = ">=0.10.2,<1.0"
-uvicorn = {extras = ["standard"], version = "^0.17.6"}
+uvicorn = {extras = ["standard"], version = ">=0.17.6"}
 pydantic = {extras = ["dotenv"], version = "^1.9.0"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = ">=0.0.5,<1.0"
 pyotp = ">=2.6.0,<3.0"
 wsproto = "^1.1.0"
-python-socketio = "^5.6.0"
+python-socketio = ">=5.6.0"
 
 
 [tool.poetry.dev-dependencies]
