--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-multipart = ">=0.0.5,<1.0"
 pyotp = ">=2.6.0,<3.0"
 wsproto = "^1.1.0"
 python-socketio = ">=5.6.0"
+protobuf = "^3.20.1"
 
 
 [tool.poetry.dev-dependencies]
