--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ python-multipart = ">=0.0.5,<1.0"
 pyotp = ">=2.6.0,<3.0"
 wsproto = "^1.1.0"
 python-socketio = ">=5.6.0"
-protobuf = "^3.20.1"
+protobuf = ">=3.20.1,<4.0"
+apscheduler = ">=3.9.1,<4.0"
+ralisem = "^0.1.0"
+tabulate = "^0.8.9"
 
 
 [tool.poetry.dev-dependencies]
